# Pacman_Game_Qt_Cplusplus

./: CMakeLists.txt  LICENSE  Pacman.bat  Pacman.pro  Pacman.sh  README.md  dockerfile  drawer.cpp  drawer.h  foodball.cpp  foodball.h  game_engine.cpp  game_map.cpp  game_map.h  ghost_base.h  ghost_orange.cpp  ghost_purple.h  ghost_red.cpp  ghost_red.h  images.qrc  movable_character_interface.cpp  powerball.h  score_display.cpp  score_display.h  screen_text_display.cpp  sounds.qrc
assets/: assets.qrc
assets/arena/: corner_wall_NW.xcf  vertical_wall.xcf
assets/map/: rounded wall.xcf
assets/pacman/: pacman_right_open_1.xcf
inc/: ball.h  ball_items_manager.h  collision_manager.cpp  collision_manager.h  common.h  controller.h  coordinates.h  drawer.h  foodball.h  game.h  game_engine.h  game_map.h  game_window.h  ghost_base.h  ghost_blue.h  ghost_orange.h  ghost_purple.h  ghost_red.h  model.h  movable_character.h  movable_character_interface.h  pacman.h  powerball.h  score_display.h  score_manager.h  screen_text_display.h  screen_text_manager.h  sounds.h  speed_manager.h
inc/ghosts/: abstract_ghost.h  blue_ghost.h  ghost_blue.h  ghost_orange.h  ghost_purple.h  ghost_red.h  orange_ghost.h  purple_ghost.h  red_ghost.h
inc/view/: abstract_ghost_frontend.h  ball_frontend.h  blue_ghost_frontend.h  game_arena.h  gui_config.h  main_window.h  orange_ghost_frontend.h  pacman_frontend.h  purple_ghost_frontend.h  red_ghost_frontend.h  score_display.h  screen_text_display.h
resource_files/: sounds.qrc
src/: CMakeLists.txt  ball.cpp  ball_items_manager.cpp  controller.cpp  controller.h  coordinates.cpp  drawer.cpp  game.cpp  game.h  game_engine.cpp  game_map.cpp  game_window.cpp  ghost_base.cpp  ghost_blue.cpp  ghost_orange.cpp  ghost_purple.cpp  ghost_red.cpp  log_manager.cpp  main.cpp  model.cpp  movable_character.cpp  movable_character_interface.cpp  pacman.cpp  powerball.cpp  score_display.cpp  screen_text_display.cpp  sounds.cpp  speed_manager.cpp
src/backend/: CMakeLists.txt  abstract_movement_manager.cpp  abstract_movement_manager.h  abstract_pixmap_provider.h  ball.cpp  ball.h  collision_manager.cpp  collision_manager.h  common.h  config.cpp  config.h  coordinates.cpp  custom_graphics_item.cpp  custom_graphics_item.h  directional_offset.h  game_loop.cpp  game_loop.h  game_manager.cpp  game_manager.h  ghost_movement_manager.cpp  ghost_movement_manager.h  ghost_pixmap_provider.cpp  ghost_pixmap_provider.h  images_urls.h  input_handler.cpp  input_handler.h  log_manager.h  movable_character.cpp  movable_character.h  movement_manager.cpp  movement_manager.h  moving_object.cpp  moving_object.h  pacman_movement_manager.cpp  pacman_movement_manager.h  pacman_pixmap_provider.cpp  path_points.cpp  path_points.h  pixmap_loader.h  pixmap_manager.h  (+8 more)
src/backend/model/: abstract_timing_manager.h  arena.cpp  arena.h  ball_items_manager.cpp  ball_items_manager.h  game_manager.cpp  game_manager.h  game_state_manager.cpp  game_state_manager.h  ghost_timing_manager.cpp  ghost_timing_manager.h  graphics_scene.cpp  graphics_scene.h  model.cpp  model.h  pacman.cpp  pacman.h  pacman_timing_manager.cpp  pacman_timing_manager.h  pellets_manager.cpp  pellets_manager.h  timing_manager.h  what_to_draw_manager.h
src/backend/model/balls/: abstract_ball.cpp  abstract_ball.h  foodball.cpp  foodball.h  powerball.cpp  powerball.h
src/backend/model/ghosts/: abstract_ghost.cpp  abstract_ghost.h  blue_ghost.cpp  blue_ghost.h  orange_ghost.cpp  orange_ghost.h  purple_ghost.cpp  purple_ghost.h  red_ghost.cpp  red_ghost.h
src/backend/model/pellets/: abstract_pellet.cpp  abstract_pellet.h  power_pellet.h  standard_pellet.h
src/backend/model/tiles/: abstract_tile.cpp  abstract_tile.h  path.cpp  path.h
src/backend/model/tiles/corner_walls/: corner_wall_ne.cpp  corner_wall_ne.h  corner_wall_nw.cpp  corner_wall_nw.h  corner_wall_se.cpp  corner_wall_se.h  corner_wall_sw.cpp  corner_wall_sw.h
src/backend/model/tiles/rounded_walls/: rounded_horizontal_wall.cpp  rounded_horizontal_wall.h  rounded_vertical_wall.cpp  rounded_vertical_wall.h
src/backend/model/tiles/straight_walls/: horizontal_wall.cpp  horizontal_wall.h  vertical_wall.cpp  vertical_wall.h
src/backend/model/walls/: abstract_wall.cpp  abstract_wall.h  horizontal_wall.cpp  horizontal_wall.h  rounded_horizontal_wall.cpp  rounded_horizontal_wall.h  rounded_vertical_wall.cpp  rounded_vertical_wall.h  vertical_wall.cpp  vertical_wall.h
src/backend/pixmap_providers/: abstract_ghost_pixmap_provider.cpp  abstract_ghost_pixmap_provider.h  blue_ghost_pixmap_provider.cpp  blue_ghost_pixmap_provider.h  orange_ghost_pixmap_provider.cpp  orange_ghost_pixmap_provider.h  pacman_pixmap_provider.cpp  pacman_pixmap_provider.h  purple_ghost_pixmap_provider.cpp  purple_ghost_pixmap_provider.h  red_ghost_pixmap_provider.cpp  red_ghost_pixmap_provider.h  scared_ghost_pixmap_provider.cpp  scared_ghost_pixmap_provider.h
src/frontend/: CMakeLists.txt  ball_frontend.cpp  game_arena.cpp  game_arena.h  graphics_view.cpp  graphics_view.h  gui_config.h  main_window.cpp  main_window.h  pacman_frontend.cpp  pacman_frontend.h  screen_text_display.cpp  screen_text_display.h
src/frontend/ghosts_frontends/: abstract_ghost_frontend.cpp  abstract_ghost_frontend.h  blue_ghost_frontend.cpp  blue_ghost_frontend.h  orange_ghost_frontend.cpp  orange_ghost_frontend.h  purple_ghost_frontend.cpp  purple_ghost_frontend.h  red_ghost_frontend.cpp  red_ghost_frontend.h
src/frontend/resource_files/: images.qrc
src/ghosts/: abstract_ghost.cpp  blue_ghost.cpp  ghost_blue.cpp  ghost_orange.cpp  ghost_purple.cpp  ghost_red.cpp  orange_ghost.cpp  purple_ghost.cpp  red_ghost.cpp
src/view/: abstract_ghost_frontend.cpp  ball_frontend.cpp  blue_ghost_frontend.cpp  game_arena.cpp  main_window.cpp  orange_ghost_frontend.cpp  pacman_frontend.cpp  purple_ghost_frontend.cpp  red_ghost_frontend.cpp  score_display.cpp  screen_text_display.cpp
tests/: CMakeLists.txt
tests/inc/: common_test_fixture.h
tests/src/: common_test_fixture.h  ghost_test.cpp  pacman_test.cpp
ui_forms/: game_window.ui
(+61 files in other folders)
