set(SOURCE_FILES
        main.cpp
        game.cpp game.h
        controller.cpp controller.h)

add_subdirectory(backend)
add_subdirectory(frontend)

set(RESOURCE_FILES_DIR ${PROJECT_ROOT}/src/frontend/resource_files)

add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES} ${RESOURCE_FILES_DIR}/images.qrc)
target_include_directories(${PROJECT_NAME} PRIVATE ${BACKEND_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE lib${PROJECT_NAME}Backend lib${PROJECT_NAME}Frontend)

set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_ROOT}/bin)
